--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.4"
-  }
+},
+  "scripts": {
+"dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"heroku-postbuild": "npm run build"}
 }
