--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "backend",
     "version": "1.0.0",
     "engines": {
-      "node": "12.x"
+        "node": "12.x"
     },
     "description": "Backend for Covid-Watch",
     "main": "server.js",
@@ -15,6 +15,11 @@
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.6",
+        "babel-preset-env": "^1.7.0",
+        "morgan": "^1.9.1",
         "nodemon": "^1.19.4"
     },
     "author": "",
