--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.9.0"
   },
   "description": "Backend for Covid-Watch",
   "main": "server.js",
@@ -25,7 +26,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "react-scripts": "^3.4.3",
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,6 +35,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "react-scripts": "^3.4.3",
   }
 }
