--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "engines": {
-    "node": "12.x",
-    "npm": "6.9.0"
+    "node": "12.x"
   },
   "description": "Backend for Covid-Watch",
   "main": "server.js",
