--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
-     "react-scripts": "0.7.0",
+    "react-scripts": "^3.4.3",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
@@ -32,11 +32,11 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
-     "start": "react-scripts start",
-     "build": "react-scripts build",
-     "test": "react-scripts test",
-     "eject": "react-scripts eject"
-   },
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -54,7 +54,8 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.20",
-    "@types/react-dom": "^16.9.5"
+    "@types/react-dom": "^16.9.5",
+    "react-scripts": "^3.4.3"
   },
   "proxy": "http://localhost:5000/"
 }
