--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^3.4.7",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
