--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^3.6.0",
