--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "clsx": "^1.1.1",
         "concurrently": "^5.3.0",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "history": "^5.0.0",
